-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 5.10.0
-
Fix Version/s: 5.10, 5.11.0 Alpha, 5.11.0
-
Component/s: MQTT
-
Labels:None
-
Commits:68fe97befd4a05dad5f3a7efadc299db6ab9a9cf
When a protocol error occurs and the client disconnects, further QMqttClient::connectToHost() calls will never be able to connect. The whole client object must be recreated. This is easily testable by running nc -k -l 1883, writing random stuff when the client connects, and then running a proper mqtt broker while trying to reconnect with the client.
For Gerrit Dashboard: QTBUG-65726 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
218384,3 | Fix reconnecting after transport error | 5.10 | qt/qtmqtt | Status: MERGED | +2 | 0 |